--- a/ceed5am/index.html
+++ b/ceed5am/index.html
@@ -449,17 +449,17 @@ Moderators will be unmuted to provide some auditory feedback. They will also mon
 <tr>
 <td>10:20-10:40</td>
 <td>1:20-1:40</td>
-<td><strong>Matrix-Free High-Order DG Methods in deal.ii</strong> <br> Martin Kronbichler (Uppsala)</td>
+<td><strong>Recent Optimisation of the Algebraic Multigrid Solver Library AmgX</strong> <br> Matthew Martineau (NVIDIA) <br> <em>AmgX is an open source distributed linear solver library specialising in multigrid preconditioning. The library exposes a range of traditional solvers and smoothers, and is developed to perform all processing efficiently on NVIDIA GPUs. This talk will give a status update, discuss some recent optimisations, and present plans for future improvement.</em></td>
 </tr>
 <tr>
 <td>10:40-11:00</td>
 <td>1:40-2:00</td>
-<td><strong>Neumann Series MGS-GMRES and Inner-Outer Smoothers</strong> <br> Stephen Thomas (NREL) <br> <em>Low-synchronization MGS-GMRES Krylov solver employing a truncated Neumann series will be presented with C-AMG preconditioners based on inner-outer Gauss-Seidel smoothers that are expressed as truncated Neumann series.</em></td>
+<td><strong>Matrix-Free High-Order DG Methods in deal.ii</strong> <br> Martin Kronbichler (Uppsala)</td>
 </tr>
 <tr>
 <td>11:00-11:20</td>
 <td>2:00-2:20</td>
-<td><strong>Full Domain Decomposition with Polynomial Reduction Preconditioner for Spectral Element Poisson Solvers</strong> <br> Pedro Bello-Maldonado (UIUC) <br> <em>Minimizing communication is central to realizing high performance for scalable execution of parallel algorithms. On GPU-based systems, iterative solvers can be prohibitively expensive without an algorithm that concentrates most of the work on the GPU devices and lightens the load on the network. This work focuses on increased local work per iteration to reduce iteration counts and thus internode communication. We present a full domain decomposition with polynomial reduction (FDD+PR) preconditioner that targets the solution of spectral-element-based Poisson problems discretized by high-order spectral elements on GPU-based exascale architectures. The algorithm constructs local composite grids by first reducing the polynomial order of the elements adjacent to the GPU-local partition, followed by progressive geometric coarsening all the way to the domain boundary. During the preconditioning step of the iterative solver, the residual is restricted to the different levels of the coarsening tree and communicated so that each processor can solve its local problem independently. Once completed, the local solutions are stitched together and the global iterative solver continues. This class of algorithms are known to achieve fast convergence at the cost of more expensive preconditioner evaluations. Our results demonstrate a faster reduction of the relative residual compared to other well known preconditioners like low-order preconditioning and hybrid-Schwarz-multigrid preconditioning.</em></td>
+<td><strong>Neumann Series MGS-GMRES and Inner-Outer Smoothers</strong> <br> Stephen Thomas (NREL) <br> <em>Low-synchronization MGS-GMRES Krylov solver employing a truncated Neumann series will be presented with C-AMG preconditioners based on inner-outer Gauss-Seidel smoothers that are expressed as truncated Neumann series.</em></td>
 </tr>
 <tr>
 <td>11:20-11:40</td>
@@ -479,7 +479,7 @@ Moderators will be unmuted to provide some auditory feedback. They will also mon
 <tr>
 <td>12:20-12:40</td>
 <td>3:20-3:40</td>
-<td><strong>hipBone: A C++ port of Nekbone</strong> <br> Noel Chalmers + Damon McDougall (AMD) <br> <em>As part of CORAL2 benchmarking and optimization efforts, AMD has developed a partial C++ port of the "NekBone" benchmark, named "hipBone", targeting current- and next-generation heterogeneous accelerated computing platforms. We will give a overview of the hipBone benchmark, and present some performance and scaling data collected on ORNL's Spock cluster.</em></td>
+<td><strong>hipBone: A C++ port of Nekbone</strong> <br> Noel Chalmers + Damon McDougall (AMD) <br> <em>As part of CORAL2 benchmarking and optimization efforts, AMD has developed a partial C++ port of the "NekBone" benchmark, named "hipBone", targeting current- and next-generation heterogeneous accelerated computing platforms. We will give an overview of the hipBone benchmark, and present some performance and scaling data collected on ORNL's Spock cluster.</em></td>
 </tr>
 <tr>
 <td>12:40-1:00</td>
@@ -521,12 +521,12 @@ Moderators will be unmuted to provide some auditory feedback. They will also mon
 <tr>
 <td>8:20-8:40</td>
 <td>11:20-11:40</td>
-<td><strong>Full Core Reactor CFD Simulations: Update from ExaSMR</strong> <br> Elia Merzari (PSU)</td>
+<td><strong>ExaSMR update: Full Core Reactor CFD Simulations</strong> <br> Elia Merzari (PSU)</td>
 </tr>
 <tr>
 <td>8:40-9:00</td>
 <td>11:40-12:00</td>
-<td><strong>The Multiphysics on Advanced Platforms Project: Performance, Portability and Scaling</strong> <br> Rob Rieben (LLNL)</td>
+<td><strong>The Multiphysics on Advanced Platforms Project: Performance, Portability and Scaling</strong> <br> Arturo Vargas (LLNL)</td>
 </tr>
 <tr>
 <td>9:00-9:20</td>
@@ -561,36 +561,41 @@ Moderators will be unmuted to provide some auditory feedback. They will also mon
 <tr>
 <td>11:00-11:20</td>
 <td>2:00-2:20</td>
-<td><strong>Break</strong> <br> • side discussions on Slack</td>
+<td><strong>Full Domain Decomposition with Polynomial Reduction Preconditioner for Spectral Element Poisson Solvers</strong> <br> Pedro Bello-Maldonado (UIUC) <br> <em>Minimizing communication is central to realizing high performance for scalable execution of parallel algorithms. On GPU-based systems, iterative solvers can be prohibitively expensive without an algorithm that concentrates most of the work on the GPU devices and lightens the load on the network. This work focuses on increased local work per iteration to reduce iteration counts and thus internode communication. We present a full domain decomposition with polynomial reduction (FDD+PR) preconditioner that targets the solution of spectral-element-based Poisson problems discretized by high-order spectral elements on GPU-based exascale architectures. The algorithm constructs local composite grids by first reducing the polynomial order of the elements adjacent to the GPU-local partition, followed by progressive geometric coarsening all the way to the domain boundary. During the preconditioning step of the iterative solver, the residual is restricted to the different levels of the coarsening tree and communicated so that each processor can solve its local problem independently. Once completed, the local solutions are stitched together and the global iterative solver continues. This class of algorithms are known to achieve fast convergence at the cost of more expensive preconditioner evaluations. Our results demonstrate a faster reduction of the relative residual compared to other well known preconditioners like low-order preconditioning and hybrid-Schwarz-multigrid preconditioning.</em></td>
 </tr>
 <tr>
 <td>11:20-11:40</td>
 <td>2:20-2:40</td>
-<td><strong>Hardware Thrust &amp; MAGMA Update</strong> <br> Stan Tomov (UTK) <br> <em>This talk provides an update on the activities of the CEED hardware thrust and the MAGMA backend</em></td>
+<td><strong>Break</strong> <br> • side discussions on Slack</td>
 </tr>
 <tr>
 <td>11:40-12:00</td>
 <td>2:40-3:00</td>
-<td><strong>Frontier COE Update</strong> <br> Scott Moe (AMD) <em>An update on progress on, and plans for the Frontier supercomputer.</em></td>
+<td><strong>Hardware Thrust &amp; MAGMA Update</strong> <br> Stan Tomov (UTK) <br> <em>This talk provides an update on the activities of the CEED hardware thrust and the MAGMA backend</em></td>
 </tr>
 <tr>
 <td>12:00-12:20</td>
 <td>3:00-3:20</td>
-<td><strong>Aurora Update &amp; OCCA DPC++ Backend</strong> <br> Kris Rowe (ANL)</td>
+<td><strong>Frontier COE Update</strong> <br> Scott Moe (AMD) <em>An update on progress on, and plans for the Frontier supercomputer.</em></td>
 </tr>
 <tr>
 <td>12:20-12:40</td>
 <td>3:20-3:40</td>
-<td><strong>El Capitan Update</strong> <br> Ian Karlin (LLNL)</td>
+<td><strong>Aurora Update &amp; OCCA DPC++ Backend</strong> <br> Kris Rowe (ANL)</td>
 </tr>
 <tr>
 <td>12:40-1:00</td>
 <td>3:40-4:00</td>
+<td><strong>El Capitan Update</strong> <br> Ian Karlin (LLNL)</td>
+</tr>
+<tr>
+<td>1:00-1:20</td>
+<td>4:00-4:20</td>
 <td><strong>Break</strong>  <br> • side discussions on Slack</td>
 </tr>
 <tr>
-<td>1:00-2:00</td>
-<td>4:00-5:00</td>
+<td>1:20-2:00</td>
+<td>4:20-5:00</td>
 <td><strong>Technical Discussions</strong> <br> • parallel sessions on Slack</td>
 </tr>
 <tr>
