--- a/ceed5am/index.html
+++ b/ceed5am/index.html
@@ -586,7 +586,7 @@ Moderators will be unmuted to provide some auditory feedback. They will also mon
 <tr>
 <td>12:40-1:00</td>
 <td>3:40-4:00</td>
-<td><strong>El Capitan Update</strong> <br> Ian Karlin (LLNL)</td>
+<td><strong>El Capitan Update &amp; Future Work</strong> <br> Ian Karlin (LLNL)</td>
 </tr>
 <tr>
 <td>1:00-1:20</td>
