Deploying the CEED website with MkDocs

--- a/ceed5am/index.html
+++ b/ceed5am/index.html
@@ -576,7 +576,7 @@ Moderators will be unmuted to provide some auditory feedback. They will also mon
 <tr>
 <td>12:00-12:20</td>
 <td>3:00-3:20</td>
-<td><strong>Frontier COE Update</strong> <br> Scott Moe (AMD) <em>An update on progress on, and plans for the Frontier supercomputer.</em></td>
+<td><strong>Frontier COE Update</strong> <br> Scott Moe (AMD) <br> <em>An update on progress on, and plans for the Frontier supercomputer.</em></td>
 </tr>
 <tr>
 <td>12:20-12:40</td>
