Deploying the CEED website with MkDocs

--- a/ceed5am/index.html
+++ b/ceed5am/index.html
@@ -459,7 +459,7 @@ Moderators will be unmuted to provide some auditory feedback. They will also mon
 <tr>
 <td>11:00-11:20</td>
 <td>2:00-2:20</td>
-<td><strong>Neumann Series in Post-Modern PM-GMRES and Inner-Outer Iterations</strong> <br> Stephen Thomas (NREL) <br> <em>Low-synchronization MGS-GMRES Krylov solver employing a truncated Neumann series will be presented with C-AMG preconditioners based on inner-outer Gauss-Seidel smoothers that are expressed as truncated Neumann series. Joint work with Kasia Swirydowicz (PNNL), Ruipeng Li (LLNL) and Paul Mullowney (Tech-X).</em></td>
+<td><strong>Neumann Series in Post-Modern PM-GMRES and Inner-Outer Iterations</strong> <br> Stephen Thomas (NREL) <br> <em>Low-synchronization PM-GMRES Krylov solver employing a truncated Neumann series will be presented with C-AMG preconditioners based on inner-outer Gauss-Seidel smoothers that are expressed as truncated Neumann series. Joint work with Kasia Swirydowicz (PNNL), Ruipeng Li (LLNL) and Paul Mullowney (NREL).</em></td>
 </tr>
 <tr>
 <td>11:20-11:40</td>
