Deploying the CEED website with MkDocs

--- a/ceed5am/index.html
+++ b/ceed5am/index.html
@@ -571,7 +571,7 @@ Moderators will be unmuted to provide some auditory feedback. They will also mon
 <tr>
 <td>11:40-12:00</td>
 <td>2:40-3:00</td>
-<td><strong>Hardware Thrust &amp; MAGMA Update</strong> <br> Stan Tomov (UTK) <br> <em>This talk provides an update on the activities of the CEED hardware thrust and the MAGMA backend</em></td>
+<td><strong>Hardware Thrust &amp; MAGMA Update</strong> <br> Stan Tomov + Natalie Beams (UTK) <br> <em>This talk provides an update on the activities of the CEED hardware thrust and the MAGMA backend</em></td>
 </tr>
 <tr>
 <td>12:00-12:20</td>
