Deploying the CEED website with mkdocs, version 1.0.4 from /Users/kolev1/Library/Python/3.9/lib/python/site-packages/mkdocs (Python 3.9)

--- a/about/index.html
+++ b/about/index.html
@@ -41,7 +41,7 @@
             </button>
 
             <!-- Main title -->
-            <a class="navbar-brand" href="http://ceed.exascaleproject.org/">CEED</a>
+            <a class="navbar-brand" href="http://ceed.exascaleproject.org">CEED</a>
         </div>
 
         <!-- Expanded navigation -->
