--- a/ceed5am/index.html
+++ b/ceed5am/index.html
@@ -41,7 +41,7 @@
             </button>
 
             <!-- Main title -->
-            <a class="navbar-brand" href="http://ceed.exascaleproject.org/">CEED</a>
+            <a class="navbar-brand" href="http://ceed.exascaleproject.org">CEED</a>
         </div>
 
         <!-- Expanded navigation -->
