Deploying the CEED website with mkdocs, version 1.0.4 from /Users/kolev1/Library/Python/3.9/lib/python/site-packages/mkdocs (Python 3.9)

--- a/pubs/index.html
+++ b/pubs/index.html
@@ -400,6 +400,11 @@
 <li>CEED-MS36 report: <a href="../docs/ceed-ms36-report.pdf">High-order algorithmic developments and optimizations for large-scale GPU-accelerated simulations</a>.</li>
 </ul>
 <h3 id="publications">Publications</h3>
+<h4 id="2021">2021</h4>
+<ol>
+<li>Tz. Kolev, P. Fischer, J. Brown, V. Dobrev, J. Dongarra, M. Min, M. Shephard, S. Tomov, T. Warburton, A. Abdelfattah, V. Barra, N. Beams, J.-S. Camier, N. Chalmers, Y. Dudouit, W. Pazner, C. Smith, K. Swirydowicz, J. Thompson and V. Tomov, <a href="https://doi.org/10.1177/10943420211020803">Efficient Exascale Discretizations: High Order Finite Element Methods</a>, Special issue of <em>The International Journal of High Performance Computing Application</em>, published <a href="https://journals.sagepub.com/doi/10.1177/10943420211020803">online</a>, <strong>2021</strong>. Also available as <a href="https://arxiv.org/abs/2109.04996">arXiv:2109.04996</a>.</li>
+<li>A. Abdelfattah, V. Barra, N. Beams, R. Bleile, J. Brown, J. Camier, R. Carson, N. Chalmers, V. Dobrev, Y. Dudouit, P. Fischer, A. Karakus, S. Kerkemeier, Tz. Kolev, Y. Lan, E. Merzari, M. Min, M. Phillips, T. Rathnayake, R. Rieben, T. Stitt, A. Tomboulides, S. Tomov, V. Tomov, A. Vargas, T. Warburton, K. Weiss, <a href="https://arxiv.org/abs/2109.05072">GPU Algorithms for Efficient Exascale Discretizations</a>, Special issue of <em>Parallel Computing</em>, to appear, <strong>2021</strong>. Also available as <a href="https://arxiv.org/abs/2109.05072">arXiv:2109.05072</a>.</li>
+</ol>
 <h4 id="2020">2020</h4>
 <ol>
 <li>A. Abdelfattah, S. Tomov, J. Dongarra, <a href="https://doi.org/10.1016/j.jpdc.2020.07.001">Matrix multiplication on batches of small matrices in half and half-complex precisions</a>, <em>Journal of Parallel and Distributed Computing</em>, vol. 145, pp. 188-201, <strong>2020</strong>.</li>
