Deploying the CEED website with mkdocs, version 1.0.4 from /Users/kolev1/Library/Python/3.9/lib/python/site-packages/mkdocs (Python 3.9)

--- a/pubs/index.html
+++ b/pubs/index.html
@@ -404,6 +404,7 @@
 <ol>
 <li>Tz. Kolev, P. Fischer, J. Brown, V. Dobrev, J. Dongarra, M. Min, M. Shephard, S. Tomov, T. Warburton, A. Abdelfattah, V. Barra, N. Beams, J.-S. Camier, N. Chalmers, Y. Dudouit, W. Pazner, C. Smith, K. Swirydowicz, J. Thompson and V. Tomov, <a href="https://doi.org/10.1177/10943420211020803">Efficient Exascale Discretizations: High Order Finite Element Methods</a>, Special issue of <em>The International Journal of High Performance Computing Application</em>, published <a href="https://journals.sagepub.com/doi/10.1177/10943420211020803">online</a>, <strong>2021</strong>. Also available as <a href="https://arxiv.org/abs/2109.04996">arXiv:2109.04996</a>.</li>
 <li>A. Abdelfattah, V. Barra, N. Beams, R. Bleile, J. Brown, J. Camier, R. Carson, N. Chalmers, V. Dobrev, Y. Dudouit, P. Fischer, A. Karakus, S. Kerkemeier, Tz. Kolev, Y. Lan, E. Merzari, M. Min, M. Phillips, T. Rathnayake, R. Rieben, T. Stitt, A. Tomboulides, S. Tomov, V. Tomov, A. Vargas, T. Warburton, K. Weiss, <a href="https://arxiv.org/abs/2109.05072">GPU Algorithms for Efficient Exascale Discretizations</a>, Special issue of <em>Parallel Computing</em>, to appear, <strong>2021</strong>. Also available as <a href="https://arxiv.org/abs/2109.05072">arXiv:2109.05072</a>.</li>
+<li>Morteza H. Siboni and Mark S. Shephard, <a href="https://www.scorec.rpi.edu/reports/view_report.php?id=761">Adaptive Workflow for Simulation of RF Heaters</a>, <em>Computer Physics Communications</em>, <em>in review</em>, <strong>2021</strong></li>
 </ol>
 <h4 id="2020">2020</h4>
 <ol>
