--- a/software/index.html
+++ b/software/index.html
@@ -312,8 +312,8 @@ components are available from:</p>
 <strong>mfem-4.3</strong>
 </button></a>
 &nbsp;&nbsp;&nbsp;
-<a href="https://github.com/Nek5000/nekRS/releases/tag/v21.0"><button type="button" class="btn btn-primary">
-<strong>nekRS-21.0</strong>
+<a href="https://github.com/Nek5000/nekRS/releases/tag/v21.1"><button type="button" class="btn btn-primary">
+<strong>nekRS-21.1</strong>
 </button></a>
 &nbsp;&nbsp;&nbsp;
 <a href="https://github.com/ceed/nek5000/releases/tag/v19.0"><button type="button" class="btn btn-primary">
@@ -333,20 +333,24 @@ components are available from:</p>
 <strong>Nekbone-17.0</strong>
 </button></a>
 &nbsp;&nbsp;&nbsp;
-<a href="https://github.com/libocca/occa/releases/tag/v1.1.0"><button type="button" class="btn btn-primary">
-<strong>OCCA-1.1</strong>
+<a href="https://github.com/libocca/occa/releases/tag/v1.2.0"><button type="button" class="btn btn-primary">
+<strong>OCCA-1.2</strong>
 </button></a>
 &nbsp;&nbsp;&nbsp;
 <a href="https://github.com/paranumal/libparanumal/releases/tag/v0.4.0"><button type="button" class="btn btn-primary">
 <strong>libParanumal-0.4</strong>
 </button></a>
 &nbsp;&nbsp;&nbsp;
-<a href="https://github.com/CEED/FMS/releases/tag/v0.1"><button type="button" class="btn btn-primary">
-<strong>FMS-0.1</strong>
+<a href="https://github.com/CEED/FMS/releases/tag/v0.2"><button type="button" class="btn btn-primary">
+<strong>FMS-0.2</strong>
 </button></a>
 &nbsp;&nbsp;&nbsp;
 <a href="https://bitbucket.org/icl/magma/commits/tag/v2.6.1"><button type="button" class="btn btn-primary">
 <strong>MAGMA-2.6.1</strong>
+</button></a>
+&nbsp;&nbsp;&nbsp;
+<a href="https://github.com/SCOREC/core/releases/tag/v2.2.6"><button type="button" class="btn btn-primary">
+<strong>PUMI-2.2.6</strong>
 </button></a>
 </center></p>
 <p>Please use the <a href="https://github.com/CEED/forum">CEED user forum</a> to report
