--- a/software/index.html
+++ b/software/index.html
@@ -340,7 +340,8 @@ components are available from:</p>
 <a href="https://github.com/paranumal/libparanumal/releases/tag/v0.4.0"><button type="button" class="btn btn-primary">
 <strong>libParanumal-0.4</strong>
 </button></a>
-&nbsp;&nbsp;&nbsp;
+</center></p>
+<p><center>
 <a href="https://github.com/CEED/FMS/releases/tag/v0.2"><button type="button" class="btn btn-primary">
 <strong>FMS-0.2</strong>
 </button></a>
