--- a/software/index.html
+++ b/software/index.html
@@ -304,10 +304,6 @@ components are available from:</p>
 <strong>&nbsp;&nbsp;CEED-4.0&nbsp;&nbsp;</strong>
 </button></a>
 &nbsp;&nbsp;&nbsp;
-<a href="https://github.com/CEED/libCEED/releases/tag/v0.9.0"><button type="button" class="btn btn-primary">
-<strong>libCEED-0.9</strong>
-</button></a>
-&nbsp;&nbsp;&nbsp;
 <a href="https://github.com/ceed/mfem/releases/tag/v4.3"><button type="button" class="btn btn-primary">
 <strong>mfem-4.3</strong>
 </button></a>
@@ -316,8 +312,18 @@ components are available from:</p>
 <strong>nekRS-21.1</strong>
 </button></a>
 &nbsp;&nbsp;&nbsp;
-<a href="https://github.com/ceed/nek5000/releases/tag/v19.0"><button type="button" class="btn btn-primary">
-<strong>Nek5000-19.0</strong>
+<a href="https://github.com/CEED/libCEED/releases/tag/v0.9.0"><button type="button" class="btn btn-primary">
+<strong>libCEED-0.9</strong>
+</button></a>
+<!--
+&nbsp;&nbsp;&nbsp;
+<a href="https://github.com/ceed/nek5000/releases/tag/v19.0">klzzwxh:0021
+klzzwxh:0023
+klzzwxh:0022</a>
+-->
+&nbsp;&nbsp;&nbsp;
+<a href="https://github.com/paranumal/libparanumal/releases/tag/v0.4.0"><button type="button" class="btn btn-primary">
+<strong>libParanumal-0.4</strong>
 </button></a>
 </center></p>
 <p><center>
@@ -328,26 +334,23 @@ components are available from:</p>
 <a href="https://github.com/CEED/Remhos/releases/tag/v1.0"><button type="button" class="btn btn-primary">
 <strong>Remhos-1.0</strong>
 </button></a>
+<!--
 &nbsp;&nbsp;&nbsp;
-<a href="https://github.com/ceed/Nekbone/releases/tag/v17.0"><button type="button" class="btn btn-primary">
-<strong>Nekbone-17.0</strong>
-</button></a>
+<a href="https://github.com/ceed/Nekbone/releases/tag/v17.0">klzzwxh:0052
+klzzwxh:0054
+klzzwxh:0053</a>
+-->
 &nbsp;&nbsp;&nbsp;
 <a href="https://github.com/libocca/occa/releases/tag/v1.2.0"><button type="button" class="btn btn-primary">
 <strong>OCCA-1.2</strong>
 </button></a>
 &nbsp;&nbsp;&nbsp;
-<a href="https://github.com/paranumal/libparanumal/releases/tag/v0.4.0"><button type="button" class="btn btn-primary">
-<strong>libParanumal-0.4</strong>
-</button></a>
-</center></p>
-<p><center>
-<a href="https://github.com/CEED/FMS/releases/tag/v0.2"><button type="button" class="btn btn-primary">
-<strong>FMS-0.2</strong>
-</button></a>
-&nbsp;&nbsp;&nbsp;
 <a href="https://bitbucket.org/icl/magma/commits/tag/v2.6.1"><button type="button" class="btn btn-primary">
 <strong>MAGMA-2.6.1</strong>
+</button></a>
+&nbsp;&nbsp;&nbsp;
+<a href="https://github.com/CEED/FMS/releases/tag/v0.2"><button type="button" class="btn btn-primary">
+<strong>FMS-0.2</strong>
 </button></a>
 &nbsp;&nbsp;&nbsp;
 <a href="https://github.com/SCOREC/core/releases/tag/v2.2.6"><button type="button" class="btn btn-primary">
