Deploying the CEED website with mkdocs, version 1.2.2 from /usr/lib/python3.9/site-packages/mkdocs (Python 3.9)

--- a/pubs/index.html
+++ b/pubs/index.html
@@ -41,7 +41,7 @@
             </button>
 
             <!-- Main title -->
-            <a class="navbar-brand" href="http://ceed.exascaleproject.org">CEED</a>
+            <a class="navbar-brand" href="http://ceed.exascaleproject.org/">CEED</a>
         </div>
 
         <!-- Expanded navigation -->
@@ -398,6 +398,10 @@
 <p><a href="https://doi.org/10.5281/zenodo.4672664"><img src="https://zenodo.org/badge/DOI/10.5281/zenodo.4672664.svg" class="doi"></a></p>
 <ul>
 <li>CEED-MS36 report: <a href="../docs/ceed-ms36-report.pdf">High-order algorithmic developments and optimizations for large-scale GPU-accelerated simulations</a>.</li>
+</ul>
+<p><a href="https://doi.org/10.5281/zenodo.5542244"><img src="https://zenodo.org/badge/DOI/10.5281/zenodo.5542244.svg" class="doi"></a></p>
+<ul>
+<li>CEED-MS37 report: <a href="../docs/ceed-ms37-report.pdf">CEED ECP Milestone Report: Port and optimize the CEED software stack to Aurora / Frontier EA Systems</a>.</li>
 </ul>
 <h3 id="publications">Publications</h3>
 <h4 id="2021">2021</h4>
