Deploying the CEED website with mkdocs, version 1.0.4 from /Users/kolev1/Library/Python/3.9/lib/python/site-packages/mkdocs (Python 3.9)

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             </button>
 
             <!-- Main title -->
-            <a class="navbar-brand" href="http://ceed.exascaleproject.org/">CEED</a>
+            <a class="navbar-brand" href="http://ceed.exascaleproject.org">CEED</a>
         </div>
 
         <!-- Expanded navigation -->
@@ -363,9 +363,9 @@ The CEED software will also include optimized assembly support for low-order met
 <div class="bs-sidebar hidden-print well" role="complementary">
     <ul class="nav bs-sidenav">
     <li class="main"><a href="../news/">What's New?</a> </li>
+       <li> <a href="./news/#software-release-mfem-v44">&#9658;&nbsp;MFEM v4.4 released</a> </li>
        <li> <a href="./news/#software-release-fms-v02">&#9658;&nbsp;FMS v0.2 released</a> </li>
        <li> <a href="./news/#ceed-annual-meeting-2021">&#9658;&nbsp;CEED annual meeting</a> </li>
-       <li> <a href="./news/#software-release-mfem-v43">&#9658;&nbsp;MFEM v4.3 released</a> </li>
        <li> <a href="./news/#software-release-ceed-v40">&#9658;&nbsp;CEED v4.0 released</a> </li>
        <li> <a href="./news/#ceed-and-ecp-featured-in-str-cover-story">&#9658;&nbsp;<em>S&TR</em> cover story</a> </li>
        <li> <a href="./news/#ecp-annual-meeting-video-highlights">&#9658;&nbsp;ECP annual meeting video</a> </li>
