Deploying the CEED website with mkdocs, version 1.0.4 from /Users/kolev1/Library/Python/3.9/lib/python/site-packages/mkdocs (Python 3.9)

--- a/404.html
+++ b/404.html
@@ -152,6 +152,10 @@
 <li >
     <a href="pumi/">PUMI</a>
 </li>
+                                    
+<li >
+    <a href="omegah/">Omega_h</a>
+</li>
                                 </ul>
                             </li>
                             <li class="dropdown">
