Deploying the CEED website with mkdocs, version 1.0.4 from /Users/kolev1/Library/Python/3.9/lib/python/site-packages/mkdocs (Python 3.9)

--- a/404.html
+++ b/404.html
@@ -209,6 +209,10 @@
 <li >
     <a href="ceed5am/">_CEED5AM</a>
 </li>
+                                    
+<li >
+    <a href="ceed6am/">_CEED6AM</a>
+</li>
                                 </ul>
                             </li>
                             <li >
