--- a/ceed6am/index.html
+++ b/ceed6am/index.html
@@ -361,14 +361,15 @@
 <p><img alt="CEED Logo" src="../img/logo-150.png" /></p>
 <h3 id="overview">Overview</h3>
 <p>CEED will hold its sixth annual meeting August 9-11, 2022 in a hybrid format:
-in-person at the University of Illinois Urbana-Champaign and virtually using ECP
-Zoom for videoconferencing and Slack for side discussions. The goal of the
-meeting is to report on the progress in the center, deepen existing and
-establish new connections with ECP hardware vendors, ECP software technologies
-projects and other collaborators, plan project activities and brainstorm/work as
-a group to make technical progress. In addition to gathering together many of
-the CEED researchers, the meeting will include representatives of the ECP
-management, hardware vendors, software technology and other interested projects.</p>
+in-person at the <a href="https://cs.illinois.edu/">Siebel Center for Computer Science</a>
+on the UIUC campus in Urbana and virtually using ECP Zoom for videoconferencing and Slack
+for side discussions. The goal of the meeting is to report on the progress in
+the center, deepen existing and establish new connections with ECP hardware
+vendors, ECP software technologies projects and other collaborators, plan
+project activities and brainstorm/work as a group to make technical progress. In
+addition to gathering together many of the CEED researchers, the meeting will
+include representatives of the ECP management, hardware vendors, software
+technology and other interested projects.</p>
 <h3 id="registration">Registration</h3>
 <p>If you plan to attend, <a href="https://forms.gle/waq6oGQcaBhTUTbVA">please register no later than <strong>July 25th</strong></a>.</p>
 <p>The registration fee for the meeting is $60, payable at the door in cash or check upon arrival at the
@@ -386,7 +387,12 @@ meeting. The fee covers snacks and refreshments each day as well as a CEED T-shi
 <li>Side discussions and breakout sessions will be on the meeting <a href="https://ceedam.slack.com/">Slack</a> space -- <em>Please join in advance</em>.</li>
 </ul>
 <h3 id="lodging-options">Lodging Options</h3>
-<p>To be announced.</p>
+<p>The meeting will be held at the <a href="https://cs.illinois.edu/">Siebel Center for Computer Science</a>
+on the UIUC campus in Urbana. There are a number of hotels in a walking distance from the building, for example
+<a href="https://www.hilton.com/en/hotels/cmiilhx-hampton-champaign-urbana/">Hampton Inn</a>, 1200 W. University Ave.</p>
+<p>See the map below for more details.</p>
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3051.2780386056743!2d-88.22709924890897!3d40.113806881829355!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880cd76baa8479a9%3A0x4e9f01d40d359630!2sDepartment%20of%20Computer%20Science%2C%20University%20of%20Illinois%20Urbana-Champaign!5e0!3m2!1sen!2sus!4v1650415322842!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+
 <h3 id="meeting-agenda">Meeting Agenda</h3>
 <p>To be announced.</p>
 <ul>
