--- a/ceed6am/index.html
+++ b/ceed6am/index.html
@@ -419,38 +419,34 @@ technology and other interested projects.</p>
 </tr>
 <tr>
 <td>11:00-11:20</td>
-<td><strong>Update on hypre's GPU Support </strong> <br> Ruipeng Li (LLNL)</td>
-</tr>
-<tr>
-<td>11:20-11:40</td>
 <td><strong>PETSc GPU Support Update</strong> <br> Junchao Zhang (ANL) + Jacob Faibussowitsch (UIUC) <br> <em>Update on the state of GPU support and infrastructure in PETSc</em></td>
 </tr>
 <tr>
-<td>11:40-12:00</td>
+<td>11:20-11:40</td>
 <td><strong>Multigrid smoothers: Chebyshev acceleration and symmetric Schwarz smoothers for SEM</strong> <br> James Lottes (Google)</td>
+</tr>
+<tr>
+<td>11:40-12:00</td>
+<td><strong>Solver developments in nekRS</strong> <br> Malachi Philips (UIUC) <br> <em>Discuss new developments in nekRS</em></td>
 </tr>
 <tr>
 <td>12:00-1:30</td>
 <td><strong>Lunch Break + Group Photo</strong></td>
 </tr>
 <tr>
-<td>1:30-1:50</td>
-<td><strong>Solver developments in nekRS</strong> <br> Malachi Philips (UIUC) <br> <em>Discuss new developments in nekRS</em></td>
-</tr>
-<tr>
-<td>1:50-2:50</td>
+<td>1:30-2:40</td>
 <td><strong>Technical Discussions</strong> <br> <em>Group discussion on topics such as: <br> • CPUs vs GPUs, AMD and Intel GPUs, ARM processors <br> • preconditioning, strong scaling, meshing, visualization, etc.</em></td>
 </tr>
 <tr>
-<td>2:50-3:10</td>
+<td>2:40-3:00</td>
 <td><strong>Coffee Break</strong> <br> • side discussions on Slack <br> • propose breakout topics</td>
 </tr>
 <tr>
-<td>3:10-3:30</td>
+<td>3:00-3:20</td>
 <td><strong>Applications and ModSim: How the two are intertwined</strong> <br> Ian Karlin (NVIDIA)</td>
 </tr>
 <tr>
-<td>3:30-4:30</td>
+<td>3:20-4:30</td>
 <td><strong>Technical Discussions</strong> <br> <em>Group discussion on topics such as: <br> • CPUs vs GPUs, AMD and Intel GPUs, ARM processors <br> • preconditioning, strong scaling, meshing, visualization, etc.</em></td>
 </tr>
 <tr>
@@ -478,7 +474,7 @@ technology and other interested projects.</p>
 </tr>
 <tr>
 <td>9:20-9:40</td>
-<td><strong>ExaSMR updates: Toward full system simulations </strong> <br> Elia Merzari (PSU)</td>
+<td><strong>ExaSMR updates: Toward full system simulations</strong> <br> Elia Merzari (PSU)</td>
 </tr>
 <tr>
 <td>9:40-10:00</td>
@@ -513,23 +509,19 @@ technology and other interested projects.</p>
 <td><strong>Lunch Break</strong></td>
 </tr>
 <tr>
-<td>1:30-1:50</td>
-<td><strong>ALCF Facilities Update</strong> <br> Kris Rowe (ANL) <br> <em>We will present updates on ALCF systems, Polaris and Aurora, as well as ongoing efforts by ALCF staff related to CEED software and applications, including OCCA, NekRS, and libParanumal.</em></td>
-</tr>
-<tr>
-<td>1:50-2:50</td>
+<td>1:30-2:40</td>
 <td><strong>Technical Discussions</strong> <br> <em>Group discussion on topics such as: <br> • CPUs vs GPUs, AMD and Intel GPUs, ARM processors <br> • preconditioning, strong scaling, meshing, visualization, etc.</em></td>
 </tr>
 <tr>
-<td>2:50-3:10</td>
+<td>2:40-3:00</td>
 <td><strong>Coffee Break</strong> <br> • side discussions on Slack</td>
 </tr>
 <tr>
-<td>3:10-3:30</td>
-<td><strong>TBD</strong></td>
+<td>3:00-3:20</td>
+<td><strong>ALCF Facilities Update</strong> <br> Kris Rowe (ANL) <br> <em>We will present updates on ALCF systems, Polaris and Aurora, as well as ongoing efforts by ALCF staff related to CEED software and applications, including OCCA, NekRS, and libParanumal.</em>*</td>
 </tr>
 <tr>
-<td>3:30-4:30</td>
+<td>3:20-4:30</td>
 <td><strong>Technical Discussions</strong> <br> <em>Group discussion on topics such as: <br> • CPUs vs GPUs, AMD and Intel GPUs, ARM processors <br> • preconditioning, strong scaling, meshing, visualization, etc.</em></td>
 </tr>
 <tr>
