Deploying the CEED website with MkDocs

--- a/ceed6am/index.html
+++ b/ceed6am/index.html
@@ -454,8 +454,8 @@ technology and other interested projects.</p>
 <td><strong>Day 1 Wrap-up</strong></td>
 </tr>
 <tr>
-<td>7:00-9:00</td>
-<td><strong>Meeting Dinner</strong></td>
+<td>6:30-8:30</td>
+<td><strong>Meeting Dinner</strong><br> <a href="https://www.couriersilvercreek.com/">Silver Creek</a>, Urbana</td>
 </tr>
 </tbody>
 </table>
