Deploying the CEED website with MkDocs

--- a/ceed6am/index.html
+++ b/ceed6am/index.html
@@ -415,7 +415,7 @@ technology and other interested projects.</p>
 </tr>
 <tr>
 <td>11:00-11:20</td>
-<td><strong>PETSc GPU Support Update</strong> <br> Junchao Zhang (ANL) + Jacob Faibussowitsch (UIUC) <br> <em>Update on the state of GPU support and infrastructure in PETSc</em></td>
+<td><strong>PETSc GPU Support Update</strong> <br> Junchao Zhang (ANL) + Jacob Faibussowitsch (UIUC) <br> <em>This talk includes two parts. In the first part, we give an update of the current PETSc GPU support status, and some new features we recently added, including matrix coordinate (COO) assembly on device, and PETSc/Kokkos interface helping users to write single-sourced code. In the second part, we describe recent updates to the library backend regarding GPUs where we introduce new library objects PetscDevice and PetscDeviceContext. We end by showcasing an experimental new Vec API to allow for safe, transparent asynchronous compute.</em></td>
 </tr>
 <tr>
 <td>11:20-11:40</td>
