Deploying the CEED website with MkDocs

--- a/ceed6am/index.html
+++ b/ceed6am/index.html
@@ -439,7 +439,7 @@ technology and other interested projects.</p>
 </tr>
 <tr>
 <td>3:00-3:20</td>
-<td><strong>Applications and ModSim: How the two are intertwined</strong> <br> Ian Karlin (NVIDIA)</td>
+<td><strong>Applications and ModSim: How the two are intertwined</strong> <br> Ian Karlin (NVIDIA) <br> <em>Applications and simplified versions of them are crucial to influencing future hardware. However, the challenges of simulation tools mean that often key performance features are missed. These gaps and how they are used in benchmarking of future systems can mean that what users want from future machines and what is procured can be significantly different.</em></td>
 </tr>
 <tr>
 <td>3:20-4:30</td>
