--- a/ceed6am/index.html
+++ b/ceed6am/index.html
@@ -486,7 +486,7 @@ technology and other interested projects.</p>
 </tr>
 <tr>
 <td>10:40-11:00</td>
-<td><strong>Hardware Thrust &amp; MAGMA Update</strong> <br> Stanimire Tomov (UTK)</td>
+<td><strong>Hardware Thrust &amp; MAGMA Update</strong> <br> Stanimire Tomov + Natalie Beams (UTK)</td>
 </tr>
 <tr>
 <td>11:00-11:20</td>
@@ -505,16 +505,16 @@ technology and other interested projects.</p>
 <td><strong>Lunch Break</strong></td>
 </tr>
 <tr>
-<td>1:30-2:40</td>
+<td>1:30-1:50</td>
+<td><strong>El Capitan Update</strong> <br> David Richards (LLNL)</td>
+</tr>
+<tr>
+<td>1:50-3:00</td>
 <td><strong>Technical Discussions</strong> <br> <em>Group discussion on topics such as: <br> • CPUs vs GPUs, AMD and Intel GPUs, ARM processors <br> • preconditioning, strong scaling, meshing, visualization, etc.</em></td>
 </tr>
 <tr>
-<td>2:40-3:00</td>
-<td><strong>Coffee Break</strong> <br> • side discussions on Slack</td>
-</tr>
-<tr>
 <td>3:00-3:20</td>
-<td><strong>ALCF Facilities Update</strong> <br> Kris Rowe (ANL) <br> <em>We will present updates on ALCF systems, Polaris and Aurora, as well as ongoing efforts by ALCF staff related to CEED software and applications, including OCCA, NekRS, and libParanumal.</em>*</td>
+<td><strong>Coffee Break</strong> <br> • side discussions on Slack</td>
 </tr>
 <tr>
 <td>3:20-4:30</td>
