Deploying the CEED website with MkDocs

--- a/software/index.html
+++ b/software/index.html
@@ -366,6 +366,7 @@ components are available from:</p>
 <a href="https://github.com/SCOREC/core/releases/tag/v2.2.7"><button type="button" class="btn btn-primary">
 <strong>PUMI-2.2.7</strong>
 </button></a>
+&nbsp;&nbsp;&nbsp;
 <a href="https://github.com/SCOREC/omega_h/releases/tag/scorec-v10.5.0"><button type="button" class="btn btn-primary">
 <strong>Omega_h-10.5.0</strong>
 </button></a></p>
