Deploying the CEED website with MkDocs

--- a/ceed7am/index.html
+++ b/ceed7am/index.html
@@ -392,7 +392,7 @@ technology, and other interested projects.</p>
 </ul>
 <h3 id="meeting-agenda">Meeting Agenda</h3>
 <p>The meeting activities will take place 9:00am-5:00pm <strong>Pacific</strong> time. Details to come.</p>
-<h4 id="tuesday-august-2">Tuesday, August 2</h4>
+<h4 id="tuesday-august-1">Tuesday, August 1</h4>
 <table>
 <thead>
 <tr>
@@ -475,7 +475,7 @@ technology, and other interested projects.</p>
 </tr>
 </tbody>
 </table>
-<h4 id="wednesday-august-3">Wednesday, August 3</h4>
+<h4 id="wednesday-august-2">Wednesday, August 2</h4>
 <table>
 <thead>
 <tr>
@@ -490,7 +490,7 @@ technology, and other interested projects.</p>
 </tr>
 <tr>
 <td>9:00-9:30</td>
-<td><strong>FUSE - A Face Upwinded Spectral Element Method for Conversation Laws</strong> <br> Per-Olof Persson (UC Berkley) <br> <em>The inertial confinement fusion (ICF) program relies upon detailed simulations with radiation hydrodynamic codes to design targets and to interpret the experimental results. The simulations treat as much physics from essential principles as is practical, including laser deposition, cross beam energy transfer, x-ray production and transport, NLTE kinetics, thermal transport, hydrodynamic instabilities, thermonuclear burn, and transport of reaction products. These simulations were used to optimize the target designs, making use of increased laser energy, to give them greater robustness. Preshot predictions of the first experiment that surpassed breakeven yielded thermonuclear burn conditions matched the experimental results reasonably well, with a target gain of ~1.5. We will cover the key developments in radiation hydrodynamic codes and modelling methodologies that enabled these simulations.</em></td>
+<td><strong>FUSE - A Face Upwinded Spectral Element Method for Conversation Laws</strong> <br> Per-Olof Persson (UC Berkley) <br> <em>We present a new high-order accurate discretization on unstructured meshes of quadrilateral meshes. Our Face Upwinded Spectral Element (FUSE) method uses the same node distribution as a high-order continuous Galerkin (CG) method, but with a particular choice of high-order node locations within each element and an upwinded stencil on the face nodes. This results in a number of benefits, including fewer degrees of freedom, straight-forward integration with CG, and a highly sparse line-based connectivity pattern. We present the derivation of the scheme and the analysis of its properties, in particular stability and conservation for arbitrary polynomial degrees. We show numerous numerical evidence for its accuracy, efficiency, and high sparsity compared to traditional schemes, on multiple classes of problems including convection-dominated flows, the Euler equations, and the incompressible Navier-Stokes equations.</em></td>
 </tr>
 <tr>
 <td>9:30-10:00</td>
@@ -542,7 +542,7 @@ technology, and other interested projects.</p>
 </tr>
 </tbody>
 </table>
-<h4 id="thursday-august-4">Thursday, August 4</h4>
+<h4 id="thursday-august-3">Thursday, August 3</h4>
 <table>
 <thead>
 <tr>
